--- a/src/test/resources/example/index.html
+++ b/src/test/resources/example/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Book Shelf</title>
+    <script type="text/javascript" src="example/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="example/js/angular.min.js"></script>
 </head>
 <body>
-
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">Book List:</div>
+        </div>
+    </div>
 </body>
 </html>
