--- a/src/test/resources/example/index.html
+++ b/src/test/resources/example/index.html
@@ -56,6 +56,14 @@
         </div>
         <div class="row-fluid"><div class="span12"> </div></div>
         <div class="row-fluid">
+            <div class="offset8 span4">
+                <form class="form-search pull-right">
+                  <input type="text" class="input-medium search-query">
+                  <button type="submit" class="btn">Search</button>
+                </form>
+            </div>
+        </div>
+        <div class="row-fluid">
             <div class="span12 well">
                 <table class="table table-striped">
                     <thead>
