--- a/src/test/resources/example/index.html
+++ b/src/test/resources/example/index.html
@@ -51,14 +51,14 @@
     <div class="container" ng-init='[MODEL_DATA]' ng-controller="listCtrl">
         <div class="row-fluid">
             <div class="span12">
-                <h1>Book List:</h1>
+                <h1><a href="/">Book List:</a></h1>
             </div>
         </div>
         <div class="row-fluid"><div class="span12"> </div></div>
         <div class="row-fluid">
             <div class="offset8 span4">
-                <form class="form-search pull-right">
-                  <input type="text" class="input-medium search-query">
+                <form class="form-search pull-right" action="/books/search">
+                  <input type="text" class="input-medium search-query" name="bookName">
                   <button type="submit" class="btn">Search</button>
                 </form>
             </div>
