--- a/src/test/resources/example/index.html
+++ b/src/test/resources/example/index.html
@@ -78,6 +78,7 @@
                             <th>Name</th>
                             <th>Price</th>
                             <th>Publish Date</th>
+                            <th>Orders</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -91,6 +92,7 @@
                             </td>
                             <td>{{book.price | currency}}</td>
                             <td>{{book.publishDate | date:'mediumDate'}}</td>
+                            <td>{{book.orders.length}}</td>
                         </tr>
                     </tbody>
                 </table>
